Latest CVS Changes 14/11/05
  - added support for delayed concatenation (-cat file.mp4:delay=2000 test.mp4)
  - fixed 3GP brand when using AVC (3GP6 shall be used)
  - fixed misc issues with text import/info display on track sizes and 3GP text track importing.
  - added SAX support in gpac XML parser to avoid dependency on libxml when unneeded
  - added new svg_in module using gpac sax parser (supports progressive loading too)
  - added "-name" option to MP4Box (track import and general cmd line opt) for setting the track handler name
  - added support for SVG scripting (ecmascript through SpiderMonkey) - most of microDOM is supported, except presentation traits.
  - added support for SVG events (DOM)
  - added support for SVG scene dumping
  - added PAR modification support to MP4Box (import time and file based)
  - IsoMedia spliting more precise
  - fixed bug in gradient raster (spread/pad/repeat modes were broken)
  - added SVG Tiny gradients
  - added SVG.preserveAspectRatio support
  - support for SVG SAX parsing & progressive loading, cf configuration.html or man gpac for more info 
  - fixed bevel stroking bug and many SVG rendering ones
  - fixed bug in MP4Box track concatenation of MPEG-4 user streams
  - added NHML import/export. NHML is an XML representation of the NHNT file, with add-ons and a more flexible way of integrating media. Doc to come on web site
  - fixed bug in meta items storage (existing items were corrupted on file rewrite)
  - fixed splitx option to support end times larger than file duration
  - clean-up of 2D direct rendering mode: 
      * no more bounds tracking for less memory usage
      * automatically mode switch to direct rendering when using slide navigation (pan&zoom)
  - clean-up of soft raster: 
      * removed all bezier curbs handling, let gpac core handle those
      * paths are now always flatten to reduce rastering times
      * misc optimizations of scanline converter (no more Y-sorting, only X-sorting used)